--- a/package.json
+++ b/package.json
@@ -15,14 +15,21 @@
     "autoprefixer": "^10.4.22",
     "browser-sync": "^3.0.4",
     "cssnano": "^7.1.2",
+    "del": "^8.0.1",
     "gulp": "^5.0.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-data": "^1.3.1",
     "gulp-ext-replace": "^0.3.0",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^9.2.0",
+    "gulp-nunjucks-render": "^2.2.3",
+    "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^10.0.0",
     "gulp-sass": "^6.0.1",
     "gulp-sourcemaps": "^3.0.0",
     "imagemin-webp": "^8.0.0",
     "node-sass": "^9.0.0",
+    "nunjucks": "^3.2.4",
     "postcss": "^8.5.6",
     "postcss-nested": "^7.0.2",
     "sass": "^1.94.3"
