--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-postcss": "^10.0.0",
     "gulp-sass": "^6.0.1",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-terser": "^2.1.0",
     "imagemin-webp": "^8.0.0",
     "node-sass": "^9.0.0",
     "nunjucks": "^3.2.4",
