--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-terser": "^2.1.0",
     "imagemin-webp": "^8.0.0",
-    "node-sass": "^9.0.0",
     "nunjucks": "^3.2.4",
     "postcss": "^8.5.6",
-    "postcss-nested": "^7.0.2",
-    "sass": "^1.94.3"
+    "postcss-sass": "^0.5.0",
+    "sass": "^1.94.3",
+    "stylelint": "^16.26.1",
+    "stylelint-config-standard-scss": "^16.0.0",
+    "stylelint-order": "^7.0.0"
   }
 }
