--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-sass": "^6.0.1",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-terser": "^2.1.0",
+    "http-proxy-middleware": "^3.0.5",
     "imagemin-webp": "^8.0.0",
     "nunjucks": "^3.2.4",
     "postcss": "^8.5.6",
